y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INT_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | STRING_LITERAL
    6                   | '(' expression ')'

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' argument_expression_list_opt ')'
   10                   | postfix_expression '.' IDENTIFIER
   11                   | postfix_expression PTR_OP IDENTIFIER
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP
   14                   | '(' type_name ')' '{' initializer_list '}'
   15                   | '(' type_name ')' '{' initializer_list ',' '}'

   16 argument_expression_list_opt: argument_expression_list
   17                             | ε

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list ',' assignment_expression

   20 unary_expression: postfix_expression
   21                 | INC_OP unary_expression
   22                 | DEC_OP unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF '(' type_name ')'

   26 unary_operator: '&'
   27               | '*'
   28               | '+'
   29               | '-'
   30               | '~'
   31               | '!'

   32 cast_expression: unary_expression
   33                | '(' type_name ')' cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression '*' cast_expression
   36                          | multiplicative_expression '/' cast_expression
   37                          | multiplicative_expression '%' cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression '+' multiplicative_expression
   40                    | additive_expression '-' multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_OP additive_expression
   43                 | shift_expression RIGHT_OP additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression '<' shift_expression
   46                      | relational_expression '>' shift_expression
   47                      | relational_expression LE_OP shift_expression
   48                      | relational_expression GE_OP shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQ_OP relational_expression
   51                    | equality_expression NE_OP relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression '&' equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression '^' AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression '|' exclusive_OR_expression

   58 logical_AND_expression: inclusive_OR_expression
   59                       | logical_AND_expression AND_OP inclusive_OR_expression

   60 logical_OR_expression: logical_AND_expression
   61                      | logical_OR_expression OR_OP logical_AND_expression

   62 conditional_expression: logical_OR_expression
   63                       | logical_OR_expression '?' expression ':' conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: '='
   67                    | MUL_ASSIGN
   68                    | DIV_ASSIGN
   69                    | MOD_ASSIGN
   70                    | ADD_ASSIGN
   71                    | SUB_ASSIGN
   72                    | LEFT_ASSIGN
   73                    | RIGHT_ASSIGN
   74                    | AND_ASSIGN
   75                    | XOR_ASSIGN
   76                    | OR_ASSIGN

   77 expression: assignment_expression
   78           | expression ',' assignment_expression

   79 expression_opt: expression
   80               | ε

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt ';'

   83 init_declarator_list_opt: init_declarator_list
   84                         | ε

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | ε

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | ε

  116 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  117               | ENUM identifier_opt '{' enumerator_list ',' '}'
  118               | ENUM IDENTIFIER

  119 identifier_opt: IDENTIFIER
  120               | ε

  121 enumerator_list: enumerator
  122                | enumerator_list ',' enumerator

  123 enumerator: IDENTIFIER
  124           | IDENTIFIER '=' constant_expression

  125 type_qualifier: CONST
  126               | RESTRICT
  127               | VOLATILE

  128 function_specifier: INLINE

  129 declarator: pointer_opt direct_declarator

  130 pointer_opt: pointer
  131            | ε

  132 direct_declarator: IDENTIFIER
  133                  | '(' declarator ')'
  134                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  135                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  136                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  137                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  138                  | direct_declarator '(' parameter_type_list ')'
  139                  | direct_declarator '(' identifier_list_opt ')'

  140 assignment_expression_opt: assignment_expression
  141                          | ε

  142 identifier_list_opt: identifier_list
  143                    | ε

  144 pointer: '*' type_qualifier_list_opt
  145        | '*' type_qualifier_list_opt pointer

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 type_qualifier_list_opt: type_qualifier_list
  149                        | ε

  150 parameter_type_list: parameter_list
  151                    | parameter_list ',' ELLIPSIS

  152 parameter_list: parameter_declaration
  153               | parameter_list ',' parameter_declaration

  154 parameter_declaration: declaration_specifiers declarator
  155                      | declaration_specifiers

  156 identifier_list: IDENTIFIER
  157                | identifier_list ',' IDENTIFIER

  158 type_name: specifier_qualifier_list

  159 initializer: assignment_expression
  160            | '{' initializer_list '}'
  161            | '{' initializer_list ',' '}'

  162 initializer_list: designation_opt initializer
  163                 | initializer_list ',' designation_opt initializer

  164 designation_opt: designation
  165                | ε

  166 designation: designator_list '='

  167 designator_list: designator
  168                | designator_list designator

  169 designator: '[' constant_expression ']'
  170           | '.' IDENTIFIER

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER ':' statement
  178                  | CASE constant_expression ':' statement
  179                  | DEFAULT ':' statement

  180 compound_statement: '{' block_item_list_opt '}'

  181 block_item_list_opt: block_item_list
  182                    | ε

  183 block_item_list: block_item
  184                | block_item_list block_item

  185 block_item: declaration
  186           | statement

  187 expression_statement: expression_opt ';'

  188 selection_statement: IF '(' expression ')' statement
  189                    | IF '(' expression ')' statement ELSE statement
  190                    | SWITCH '(' expression ')' statement

  191 iteration_statement: WHILE '(' expression ')' statement
  192                    | DO statement WHILE '(' expression ')' ';'
  193                    | FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
  194                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

  195 jump_statement: GOTO IDENTIFIER ';'
  196               | CONTINUE ';'
  197               | BREAK ';'
  198               | RETURN expression_opt ';'

  199 translation_unit: external_declaration
  200                 | translation_unit external_declaration

  201 external_declaration: function_definition
  202                     | declaration

  203 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  204 declaration_list_opt: declaration_list
  205                     | ε

  206 declaration_list: declaration
  207                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 31
    '%' (37) 37
    '&' (38) 26 53
    '(' (40) 6 9 14 15 25 33 133 138 139 188 189 190 191 192 193 194
    ')' (41) 6 9 14 15 25 33 133 138 139 188 189 190 191 192 193 194
    '*' (42) 27 35 137 144 145
    '+' (43) 28 39
    ',' (44) 15 19 78 92 117 122 151 153 157 161 163
    '-' (45) 29 40
    '.' (46) 10 170
    '/' (47) 36
    ':' (58) 63 177 178 179
    ';' (59) 82 187 192 193 194 195 196 197 198
    '<' (60) 45
    '=' (61) 66 94 124 166
    '>' (62) 46
    '?' (63) 63
    '[' (91) 8 134 135 136 137 169
    ']' (93) 8 134 135 136 137 169
    '^' (94) 55
    '{' (123) 14 15 116 117 160 161 180
    '|' (124) 57
    '}' (125) 14 15 116 117 160 161 180
    '~' (126) 30
    error (256)
    IDENTIFIER <sval> (258) 1 10 11 118 119 123 124 132 156 157 170 177 195
    STRING_LITERAL <sval> (259) 5
    INT_CONSTANT (260) 2
    FLOAT_CONSTANT (261) 3
    CHAR_CONSTANT (262) 4
    AUTO (263) 97
    BREAK (264) 197
    CASE (265) 178
    CHAR (266) 100
    CONST (267) 125
    CONTINUE (268) 196
    DEFAULT (269) 179
    DO (270) 192
    DOUBLE (271) 105
    ELSE (272) 189
    ENUM (273) 116 117 118
    EXTERN (274) 95
    FLOAT (275) 104
    FOR (276) 193 194
    GOTO (277) 195
    IF (278) 188 189
    INLINE (279) 128
    INT (280) 102
    LONG (281) 103
    REGISTER (282) 98
    RESTRICT (283) 126
    RETURN (284) 198
    SHORT (285) 101
    SIGNED (286) 106
    SIZEOF (287) 24 25
    STATIC (288) 96 135 136
    STRUCT (289)
    SWITCH (290) 190
    TYPEDEF (291)
    UNION (292)
    UNSIGNED (293) 107
    VOID (294) 99
    VOLATILE (295) 127
    WHILE (296) 191 192
    BOOL (297) 108
    COMPLEX (298) 109
    IMAGINARY (299) 110
    ELLIPSIS (300) 151
    RIGHT_ASSIGN (301) 73
    LEFT_ASSIGN (302) 72
    ADD_ASSIGN (303) 70
    SUB_ASSIGN (304) 71
    MUL_ASSIGN (305) 67
    DIV_ASSIGN (306) 68
    MOD_ASSIGN (307) 69
    AND_ASSIGN (308) 74
    XOR_ASSIGN (309) 75
    OR_ASSIGN (310) 76
    RIGHT_OP (311) 43
    LEFT_OP (312) 42
    INC_OP (313) 12 21
    DEC_OP (314) 13 22
    PTR_OP (315) 11
    AND_OP (316) 59
    OR_OP (317) 61
    LE_OP (318) 47
    GE_OP (319) 48
    EQ_OP (320) 50
    NE_OP (321) 51
    LOWER_THAN_ELSE (322)


Nonterminals, with rules where they appear

    $accept (92)
        on left: 0
    primary_expression (93)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix_expression (94)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 8 9 10 11 12 13 20
    argument_expression_list_opt (95)
        on left: 16 17
        on right: 9
    argument_expression_list (96)
        on left: 18 19
        on right: 16 19
    unary_expression (97)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 65
    unary_operator (98)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression (99)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression (100)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression (101)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression (102)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression (103)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression (104)
        on left: 49 50 51
        on right: 50 51 52 53
    AND_expression (105)
        on left: 52 53
        on right: 53 54 55
    exclusive_OR_expression (106)
        on left: 54 55
        on right: 55 56 57
    inclusive_OR_expression (107)
        on left: 56 57
        on right: 57 58 59
    logical_AND_expression (108)
        on left: 58 59
        on right: 59 60 61
    logical_OR_expression (109)
        on left: 60 61
        on right: 61 62 63
    conditional_expression (110)
        on left: 62 63
        on right: 63 64 81
    assignment_expression (111)
        on left: 64 65
        on right: 18 19 65 77 78 135 136 140 159
    assignment_operator (112)
        on left: 66 67 68 69 70 71 72 73 74 75 76
        on right: 65
    expression (113)
        on left: 77 78
        on right: 6 8 63 78 79 188 189 190 191 192
    expression_opt (114)
        on left: 79 80
        on right: 187 193 194 198
    constant_expression (115)
        on left: 81
        on right: 124 169 178
    declaration (116)
        on left: 82
        on right: 185 194 202 206 207
    init_declarator_list_opt (117)
        on left: 83 84
        on right: 82
    declaration_specifiers (118)
        on left: 85 86 87 88
        on right: 82 89 154 155 203
    declaration_specifiers_opt (119)
        on left: 89 90
        on right: 85 86 87 88
    init_declarator_list (120)
        on left: 91 92
        on right: 83 92
    init_declarator (121)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (122)
        on left: 95 96 97 98
        on right: 85
    type_specifier (123)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 86 112
    specifier_qualifier_list (124)
        on left: 112 113
        on right: 114 158
    specifier_qualifier_list_opt (125)
        on left: 114 115
        on right: 112 113
    enum_specifier (126)
        on left: 116 117 118
        on right: 111
    identifier_opt (127)
        on left: 119 120
        on right: 116 117
    enumerator_list (128)
        on left: 121 122
        on right: 116 117 122
    enumerator (129)
        on left: 123 124
        on right: 121 122
    type_qualifier (130)
        on left: 125 126 127
        on right: 87 113 146 147
    function_specifier (131)
        on left: 128
        on right: 88
    declarator (132)
        on left: 129
        on right: 93 94 133 154 203
    pointer_opt (133)
        on left: 130 131
        on right: 129
    direct_declarator (134)
        on left: 132 133 134 135 136 137 138 139
        on right: 129 134 135 136 137 138 139
    assignment_expression_opt (135)
        on left: 140 141
        on right: 134
    identifier_list_opt (136)
        on left: 142 143
        on right: 139
    pointer (137)
        on left: 144 145
        on right: 130 145
    type_qualifier_list (138)
        on left: 146 147
        on right: 136 147 148
    type_qualifier_list_opt (139)
        on left: 148 149
        on right: 134 135 137 144 145
    parameter_type_list (140)
        on left: 150 151
        on right: 138
    parameter_list (141)
        on left: 152 153
        on right: 150 151 153
    parameter_declaration (142)
        on left: 154 155
        on right: 152 153
    identifier_list (143)
        on left: 156 157
        on right: 142 157
    type_name (144)
        on left: 158
        on right: 14 15 25 33
    initializer (145)
        on left: 159 160 161
        on right: 94 162 163
    initializer_list (146)
        on left: 162 163
        on right: 14 15 160 161 163
    designation_opt (147)
        on left: 164 165
        on right: 162 163
    designation (148)
        on left: 166
        on right: 164
    designator_list (149)
        on left: 167 168
        on right: 166 168
    designator (150)
        on left: 169 170
        on right: 167 168
    statement (151)
        on left: 171 172 173 174 175 176
        on right: 177 178 179 186 188 189 190 191 192 193 194
    labeled_statement (152)
        on left: 177 178 179
        on right: 171
    compound_statement (153)
        on left: 180
        on right: 172 203
    block_item_list_opt (154)
        on left: 181 182
        on right: 180
    block_item_list (155)
        on left: 183 184
        on right: 181 184
    block_item (156)
        on left: 185 186
        on right: 183 184
    expression_statement (157)
        on left: 187
        on right: 173
    selection_statement (158)
        on left: 188 189 190
        on right: 174
    iteration_statement (159)
        on left: 191 192 193 194
        on right: 175
    jump_statement (160)
        on left: 195 196 197 198
        on right: 176
    translation_unit (161)
        on left: 199 200
        on right: 0 200
    external_declaration (162)
        on left: 201 202
        on right: 199 200
    function_definition (163)
        on left: 203
        on right: 201
    declaration_list_opt (164)
        on left: 204 205
        on right: 203
    declaration_list (165)
        on left: 206 207
        on right: 204 207


State 0

    0 $accept: • translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   97 storage_class_specifier: AUTO •

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: CHAR •

    $default  reduce using rule 100 (type_specifier)


State 3

  125 type_qualifier: CONST •

    $default  reduce using rule 125 (type_qualifier)


State 4

  105 type_specifier: DOUBLE •

    $default  reduce using rule 105 (type_specifier)


State 5

  116 enum_specifier: ENUM • identifier_opt '{' enumerator_list '}'
  117               | ENUM • identifier_opt '{' enumerator_list ',' '}'
  118               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 120 (identifier_opt)

    identifier_opt  go to state 33


State 6

   95 storage_class_specifier: EXTERN •

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  104 type_specifier: FLOAT •

    $default  reduce using rule 104 (type_specifier)


State 8

  128 function_specifier: INLINE •

    $default  reduce using rule 128 (function_specifier)


State 9

  102 type_specifier: INT •

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: LONG •

    $default  reduce using rule 103 (type_specifier)


State 11

   98 storage_class_specifier: REGISTER •

    $default  reduce using rule 98 (storage_class_specifier)


State 12

  126 type_qualifier: RESTRICT •

    $default  reduce using rule 126 (type_qualifier)


State 13

  101 type_specifier: SHORT •

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: SIGNED •

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: STATIC •

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  107 type_specifier: UNSIGNED •

    $default  reduce using rule 107 (type_specifier)


State 17

   99 type_specifier: VOID •

    $default  reduce using rule 99 (type_specifier)


State 18

  127 type_qualifier: VOLATILE •

    $default  reduce using rule 127 (type_qualifier)


State 19

  108 type_specifier: BOOL •

    $default  reduce using rule 108 (type_specifier)


State 20

  109 type_specifier: COMPLEX •

    $default  reduce using rule 109 (type_specifier)


State 21

  110 type_specifier: IMAGINARY •

    $default  reduce using rule 110 (type_specifier)


State 22

  202 external_declaration: declaration •

    $default  reduce using rule 202 (external_declaration)


State 23

   82 declaration: declaration_specifiers • init_declarator_list_opt ';'
  203 function_definition: declaration_specifiers • declarator declaration_list_opt compound_statement

    '*'  shift, and go to state 34

    ';'       reduce using rule 84 (init_declarator_list_opt)
    $default  reduce using rule 131 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   85 declaration_specifiers: storage_class_specifier • declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   86 declaration_specifiers: type_specifier • declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  111 type_specifier: enum_specifier •

    $default  reduce using rule 111 (type_specifier)


State 27

   87 declaration_specifiers: type_qualifier • declaration_specifiers_opt
